[package]
name = "imgShow3"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
image = "0.24.6"
opencv = "0.82.1"
slint = "1.0.2"
toml = "0.7.5"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"


[build-dependencies]
slint-build = "1.0.0"
